prototype: Adler and Murmur3